# newAssignment1

./: BinaryInsersionSort.cpp  BinaryInsersionSort.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Equations.cpp  Equations.hpp  FileStoring.cpp  FileStoring.hpp  List.cpp  List.hpp  Queue.cpp  Queue.hpp  Quicksort.cpp  Quicksort.hpp  Stack.cpp  Stack.hpp  main.cpp
