cmake_minimum_required(VERSION 3.20)
project(newAssignment1)

set(CMAKE_CXX_STANDARD 14)

add_executable(newAssignment1
        .idea/.gitignore
        .idea/modules.xml
        .idea/newAssignment1.iml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp Stack.cpp Stack.hpp Cell.cpp Cell.hpp Queue.cpp Queue.hpp List.cpp List.hpp Equations.cpp Equations.hpp FileStoring.cpp FileStoring.hpp Quicksort.cpp Quicksort.hpp BinaryInsersionSort.cpp BinaryInsersionSort.hpp)
